--- a/views/admin/restaurants.hbs
+++ b/views/admin/restaurants.hbs
@@ -6,18 +6,7 @@
 <br />
 <br />
 
-<!-- Tabs for switching between Restaurants and Users -->
-<ul class="nav nav-tabs">
-  <li class="nav-item">
-    <a class="nav-link {{#if (eq activeTab 'restaurants')}}active{{/if}}" href="/admin/restaurants">Restaurants</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link {{#if (eq activeTab 'users')}}active{{/if}}" href="/admin/users">Users</a>
-  </li>
-</ul>
-
-<br />
-<br />
+{{> admin-tabs activeTab='restaurants'}}
 
 <table class="table align-middle">
   <thead class="thead-dark">
