--- a/views/partials/admin-tabs.hbs
+++ b/views/partials/admin-tabs.hbs
@@ -1,14 +1,12 @@
-<!-- Tabs for switching between Restaurants and Users -->
-<ul class="nav nav-tabs">
+<h1>餐廳後台</h1>
+<ul class="nav nav-tabs my-4">
   <li class="nav-item">
-    <a class="nav-link {{#if (eq activeTab 'restaurants')}}active{{/if}}" href="/admin/restaurants">Restaurants</a>
+    <a class="nav-link {{#ifCond route 'restaurants'}}active{{/ifCond}}" href="/admin/restaurants">Restaurants</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link {{#if (eq activeTab 'users')}}active{{/if}}" href="/admin/users">Users</a>
+    <a class="nav-link {{#ifCond route 'users'}}active{{/ifCond}}" href="/admin/users">Users</a>
   </li>
   <li class="nav-item">
-    <a class="nav-link {{#if (eq activeTab 'categories')}}active{{/if}}" href="/admin/categories">Categories</a>
+    <a class="nav-link {{#ifCond route 'categories'}}active{{/ifCond}}" href="/admin/categories">Categories</a>
   </li>
 </ul>
-
-<br />
