--- a/views/admin/categories.hbs
+++ b/views/admin/categories.hbs
@@ -1,6 +1,7 @@
 {{> admin-tabs activeTab='categories'}}
 
 <!-- Create Category Form -->
+{{#unless isEdit}}
 <div class="d-flex align-items-center pt-3 pb-5 my-3 text-white-50 bg-purple">
   <form class="row" action="/admin/categories" method="POST">
     <div class="col-auto">
@@ -11,6 +12,24 @@
     </div>
   </form>
 </div>
+{{/unless}}
+
+<!-- Update Category Form -->
+{{#if isEdit}}
+<div class="d-flex align-items-center pt-3 pb-5 my-3 text-white-50 bg-purple">
+  <form class="row" action="/admin/categories/{{category.id}}?_method=PUT" method="POST">
+    <div class="col-auto">
+      <input class="form-control" type="text" placeholder="Category Name" name="name" value="{{category.name}}">
+    </div>
+    <div class="col-auto">
+      <button class="btn btn-success" type="submit">Update</button>
+    </div>
+    <div class="col-auto">
+      <a class="btn btn-primary" href="/admin/categories">or Create New</a>
+    </div>
+  </form>
+</div>
+{{/if}}
 
 <!-- Users Table -->
 <table class="table align-middle">
@@ -28,7 +47,7 @@
       <td>{{this.name}}</td>
       <td>
         <button type="button" class="btn btn-link">
-          <a class="btn btn-link link-primary" href="/admin/categories/{{this.id}}/edit">
+          <a class="btn btn-link link-primary" href="/admin/categories/{{this.id}}">
             Edit
           </a>
         </button>
