--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -6,8 +6,27 @@
   <div class="col-md-8">
     <h1>{{user.name}}</h1>
     <p>{{user.email}}</p>
+    <p>{{comments.length}} 已評論餐廳</p>
     <a href="/users/{{user.id}}/edit" class="btn btn-primary">edit</a>
   </div>
 
   <hr>
+</div>
+
+<!-- Section for displaying restaurant thumbnails -->
+<p>{{comments.length}} 已評論餐廳</p>
+<div class="row">
+  {{#if comments.length}}
+  {{#each comments}}
+  <div class="col-1 mb-3">
+    <a href="/restaurants/{{this.Restaurant.id}}">
+      <img src="{{this.Restaurant.image}}" alt="{{this.Restaurant.name}}" class="img-thumbnail">
+    </a>
+  </div>
+  {{/each}}
+  {{else}}
+  <div class="col-12">
+    <p>目前沒有評論任何餐廳。</p>
+  </div>
+  {{/if}}
 </div>
