--- a/views/restaurants.hbs
+++ b/views/restaurants.hbs
@@ -35,7 +35,7 @@
 <nav class="mt-3" aria-label="page navigation">
   <ul class="pagination">
 
-    {{!-- 如果 currentPage 在第一頁，那麼 「<<」符號就不會顯示出來 --}} <li
+    {{!-- 如果 currentPage 在第一頁，那麼 「<<」符號就不能點 --}} <li
       class="page-item {{#ifCond pagination.currentPage 1}}disabled{{/ifCond}}">
       <a class="page-link" href="/restaurants?page={{pagination.prev}}&categoryId={{categoryId}}" aria-label="Previous">
         <span aria-hidden="true">&laquo;</span>
@@ -52,7 +52,7 @@
       {{/ifCond}}
       {{/each}}
 
-      {{!-- 如果 currentPage 在 totalPage 頁（最後一頁），那麼 「>>」符號就不會顯示出來 --}}
+      {{!-- 如果 currentPage 在 totalPage 頁（最後一頁），那麼 「>>」符號就不能點 --}}
       <li class="page-item {{#ifCond pagination.currentPage pagination.totalPage}}disabled{{/ifCond}}">
         <a class="page-link" href="/restaurants?page={{pagination.next}}&categoryId={{categoryId}}" aria-label="Next">
           <span aria-hidden="true">&raquo;</span>
