update the userstory: update the user profile

--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -7,9 +7,9 @@
     <h1>{{user.name}}</h1>
     <p>{{user.email}}</p>
     <p>{{comments.length}} 已評論餐廳</p>
-    <p>{{favoritedRestaurants.length}} 收藏的餐廳</p>
-    <p>{{followers.length}} followers（追蹤者）</p>
-    <p>{{followings.length}} followings（追隨的人）</p>
+    <p>{{favoritedRestaurantsData.length}} 收藏的餐廳</p>
+    <p>{{followersData.length}} followers（追蹤者）</p>
+    <p>{{followingsData.length}} followings（追隨的人）</p>
     <a href="/users/{{user.id}}/edit" class="btn btn-primary">edit</a>
   </div>
 
